iptables配置
iptables 配置文件地址  vim/etc/sysconfig/iptables


我的防火墙配置

:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
#default SSH 22 close
#-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
#nginx
-A INPUT -p tcp -m state --state NEW -m tcp --dport 21 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443  -j ACCEPT
#shadowsocks
-A INPUT -p tcp -m state --state NEW -m tcp --dport XXXX -j ACCEPT
#change the SSH port to XXXX
-A INPUT -p tcp -m state --state NEW -m tcp --dport XXXX -j ACCEPT
#mysql
-A INPUT -p tcp -m state --state NEW -m tcp --dport XXXX -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited

COMMIT
